--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"version": "1.0.0",
 	"description": "A typescript template project for Phaser 3 using Parceljs",
 	"scripts": {
-		"start": "parcel src/index.html -p 8000",
-		"build": "parcel build src/index.html --out-dir dist",
+		"start": "parcel src/client/index.html -p 8000",
+		"start-server": "ts-node-dev --project tsconfig.server.json src/server/index.ts",
+		"build": "parcel build src/client/index.html --out-dir dist",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
 	},
-	"author": "supertommy",
+	"author": "csshelton70 (from outcade videos)",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -16,15 +17,25 @@
 	},
 	"homepage": "https://github.com/ourcade/phaser3-parcel-template",
 	"devDependencies": {
+		"@types/cors": "^2.8.6",
+		"@types/express": "^4.17.1",
 		"@typescript-eslint/eslint-plugin": "^2.29.0",
 		"@typescript-eslint/parser": "^2.29.0",
 		"eslint": "^6.8.0",
 		"minimist": ">=1.2.2",
 		"parcel-plugin-clean-easy": "^1.0.2",
 		"parcel-plugin-static-files-copy": "^2.4.3",
+		"ts-node": "^8.1.0",
+		"ts-node-dev": "^1.0.0-pre.63",
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
+		"@colyseus/arena": "^0.14.9",
+		"@colyseus/monitor": "^0.14.0",
+		"@colyseus/social": "^0.10.9",
+		"colyseus": "^0.14.0",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
 		"phaser": "^3.50.1"
 	},
 	"parcelCleanPaths": [
