--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"dist"
 	],
 	"staticFiles": {
-		"staticPath": "src/client/public",
+		"staticPath": "src/client",
 		"watcherGlob": "**"
 	}
 }
