--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@colyseus/social": "^0.10.9",
 		"colyseus": "^0.14.0",
 		"colyseus.js": "^0.14.12",
+		"config": "^3.3.6",
 		"cors": "^2.8.5",
 		"express": "^4.16.4",
 		"phaser": "^3.50.1",
